<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/main_fragment"
            android:icon="@drawable/home"
            android:title="@string/home"
            android:checked="true"/>

        <item
            android:id="@+id/account_fragment"
            android:icon="@drawable/account"
            android:title="@string/account_label" />

        <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
    <group android:id="@+id/info_group" android:checkableBehavior="single">

        <item
            android:id="@+id/info_fragment"
            android:icon="@drawable/info"
            android:title="@string/about_label" />

    </group>

</menu>
