<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/account_settings_label"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:layout_marginStart="@dimen/settings_horizontal_margin"
            android:layout_marginEnd="@dimen/settings_horizontal_margin"
            android:inputType="textPersonName"
            android:hint="@string/name_label"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_horizontal_margin"
            android:layout_marginEnd="@dimen/settings_horizontal_margin"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:inputType="textPersonName"
            android:hint="@string/surname_label"/>

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/separator_vertical_margin"
        android:layout_marginBottom="@dimen/separator_vertical_margin"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/unibo_students_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/unibo_students_label" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_horizontal_margin"
            android:layout_marginEnd="@dimen/settings_horizontal_margin"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:inputType="number"
            android:hint="@string/badge_label"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_horizontal_margin"
        android:layout_marginEnd="@dimen/settings_horizontal_margin"
        android:layout_marginTop="@dimen/settings_vertical_margin"
        android:textColor="@android:color/black"
        android:text="@string/course_label"/>

    <Spinner
        android:id="@+id/spinner_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_horizontal_margin"
        android:layout_marginEnd="@dimen/settings_horizontal_margin"
        android:layout_marginBottom="@dimen/settings_vertical_margin"
        android:layout_marginTop="@dimen/settings_vertical_margin" />


</LinearLayout>