<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/login_margin"
    android:paddingEnd="@dimen/login_margin"
    android:background="#eee">

    <TextView
        android:id="@+id/library_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/library_name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/day_label"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/date_label"
        android:layout_toEndOf="@id/date_label" />

    <TextView
        android:id="@+id/entrance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/date_label"
        android:layout_toEndOf="@id/date"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:text="@string/entrance_label"/>

    <TextView
        android:id="@+id/time_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/entrance_label"
        android:layout_alignBaseline="@id/entrance_label" />

    <TextView
        android:id="@+id/exit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/entrance_label"
        android:layout_toEndOf="@id/time_in"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:text="@string/exit_label"/>

    <TextView
        android:id="@+id/time_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/entrance_label"
        android:layout_toEndOf="@id/exit_label" />


</RelativeLayout>